--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://eduardbede.github.io/webPortofolio/",
   "name": "web-dev-portofolio",
   "version": "0.1.0",
   "private": true,
@@ -8,7 +9,6 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
-    "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-image-gallery": "^1.2.9",
@@ -17,6 +17,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.7"
   }
