--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://eduardbede.github.io/webPortofolio/",
-  "name": "web-dev-portofolio",
+  "homepage": "https://eduardbede.github.io/webPortfolio/",
+  "name": "web-dev-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
